@@ -29,6 +29,8 @@ Upcoming release: BINARY COMPATIBLE
  * Added support for the ARM Cortex A55
  * Added support for the ODroid C4
  * Rename libsel4 config option ENABLE_SMP_SUPPORT to CONFIG_ENABLE_SMP_SUPPORT to be namespace compliant.
+ * Rename libsel4 config option AARCH64_VSPACE_S2_START_L1 to CONFIG_AARCH64_VSPACE_S2_START_L1 to be namespace
+   compliant.
 
 ## Upgrade Notes
 ---
